--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^3.2.13",
     "vue-router": "^4.2.5",
     "vuetify": "^3.5.3",
+    "vuex": "^4.1.0",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
