--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "@vue-flow/core": "^1.37.1",
     "core-js": "^3.8.3",
     "firebase": "^10.10.0",
     "firebase-tools": "^13.6.0",
