--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "@vue-flow/background": "^1.3.0",
+    "@vue-flow/controls": "^1.1.2",
     "@vue-flow/core": "^1.37.1",
+    "@vue-flow/minimap": "^1.5.0",
     "core-js": "^3.8.3",
     "firebase": "^10.10.0",
     "firebase-tools": "^13.6.0",
